<resources>
    <string name="app_name">CashOnWise</string>
    <string name="nameOfApplication">Cash On Wise</string>
    <string name="title_activity_menu">Cow Menu</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="menu_profile">profile</string>
    <string name="menu_balance">Check My Balance</string>
    <string name="menu_topup">Top Up</string>
    <string name="menu_payment">Cow Pay</string>
    <string name="menu_history">Transaction History</string>
    <string name="menu_changePassword">Change My Pin Password</string>
    <string name="menu_viewBankAcc">View My Bank Info</string>
    <string name="menu_logout">Log out</string>

    <string name="button_login">Login</string>
    <string name="button_signup">Sign Up</string>
    <string name="button_createnewaccount">Create New Account Now</string>
    <string name="button_scan">Click to Scan QR now</string>
    <string name="button_proceed">Proceed Payment</string>
    <string name="button_forgot">Forget My Password</string>
    <string name="button_submit_change_pin">Submit</string>

    <string name="tv_step1">Step 1: Click To Scan The QR Code</string>
    <string name="tv_step2">Step 2: Confirm The Amount</string>
    <string name="tv_step3">Step 3: Enter Pin Number and Click Proceed Payment</string>
    <string name="tv_thanks">Thank You For Using COW Pay, Your Payment Is In Process. Please be Patient.</string>
    <string name="tv_registartion_title">Account Registration</string>
    <string name="tv_signup">No Account? Hurry Up And Click On Sign Up Button</string>
    <string name="tv_pin_instruction">Enter a 4-digit number. This will be used as your Personal identification No.(Pin) every time you make transaction</string>

    <string name="chk_remember_me">Always Remember Me</string>

    <string name="hint_personal_name">Enter Your Name Here</string>
    <string name="hint_personal_ic">Enter Your IC Here</string>
    <string name="hint_personal_address">Enter Your Home Address Here</string>
    <string name="hint_personal_pos">Enter Your Pos Code Here</string>
    <string name="hint_personal_contactno">Enter Your Contact Number Here</string>
    <string name="hint_personal_email">Enter Your Personal Email Here</string>
    <string name="hint_personal_password">Enter Your Password For Cow Account</string>
    <string name="hint_verify_ID">Enter Your Account ID</string>
    <string name="hint_verify_password">Enter Your Password</string>
    <string name="hint_personal_repassword">Re-Enter Your Password</string>
    <string name="hint_personal_pin">Enter Your 4-Digit Pin Number</string>
    <string name="hint_personal_repin">Re-Enter 4-Digit Pin Number</string>
    <string name="hint_personal_currentPin">Enter Current Pin Number</string>
    <string name="hint_personal_newPin">Enter New 4-Digit Pin Number</string>
    <string name="hint_personal_reNewPin">Confirm 4-Digit Pin Number</string>

    <string name="label_personal">Personal Detail</string>
    <string name="label_address">Address Location Detail</string>
    <string name="label_email">Personal Account and Setup</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_payment">Cow Pay</string>
    <string name="title_activity_signup">Sign Up Your New Account</string>
    <string name="title_activity_transactionHistory">Your previous transaction</string>
    <string name="title_activity_topUp">Top Up your COW Pay</string>
    <string name="title_activity_changePin">Change Your Pin</string>
    <string name="title_activity_chkBalance">My Balance</string>

    <item name="visible" type="id" />
    <item name="masked" type="id" />

    <string-array name="Mstate_arr">
        <item>Kedah</item>
        <item>Perlis</item>
        <item>Pulau Pinang</item>
        <item>Perak</item>
        <item>Kuantan</item>
        <item>Melaka</item>
        <item>Terengganu</item>
        <item>Selangor</item>
        <item>Negeri Sembilan</item>
        <item>Johor Bharu</item>
        <item>Sabah</item>
        <item>Sarawak</item>
        <item>Pahang</item>
    </string-array>

    <!-- Transaction History Activity -->
    <string-array name="TransactionType">
        <item>Payment Transaction</item>
        <item>Top Up Transaction</item>
    </string-array>

    <!-- Top Up Activity -->
    <string-array name="PaymentMethod">
        <item>Inter-Bank Transfer</item>
        <item>Credit/Debit Card Payment</item>
    </string-array>

    <string name="creditCardNum">Credit Card Number</string>
    <string name="topUpAmount">Top Up Amount</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>


    <string name="name">Name</string>
    <string name="icnum">IC No</string>
    <string name="contactnum">Contact</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="pin">Pin</string>

    <!-- Forget Password  -->
    <string name="forgetPassword">Forget Password</string>
    <string name="loginId">Login ID</string>
    <string name="yourLoginId">Your Login ID</string>
</resources>
