<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:padding="30dp">

    <TextView
        android:id="@+id/textView2"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="20dp"
        android:textStyle="bold"
        android:text="@string/forgetPassword" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loginId"
        android:textSize="16dp"/>

    <EditText
        android:id="@+id/editTextLoginId"
        android:ems="10"
        style="@style/editText_style"
        android:hint="@string/yourLoginId"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/buttonConfirm"
        style="@style/button_style"
        android:text="@string/confirm" />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/button_style"
        android:text="@string/cancel" />

</LinearLayout>