<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="25dp"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    tools:context="com.example.cashonwise.cashonwise.ChangePinActivity">

    <TextView
        android:id="@+id/textViewPinInstruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="#00a632"
        android:text="@string/tv_pin_instruction" />

    <EditText
        android:id="@+id/editTextCurrentPin"
        style="@style/editText_style"
        android:ems="10"
        android:hint="@string/hint_personal_currentPin"
        android:maxLength="4"
        android:inputType="numberPassword"
         />

    <EditText
        android:id="@+id/editTextNewPin"
        style="@style/editText_style"
        android:ems="10"
        android:hint="@string/hint_personal_newPin"
        android:inputType="numberPassword"
        />

    <EditText
        android:id="@+id/editTextConfirmPin"
        style="@style/editText_style"
        android:ems="10"
        android:maxLength="4"
        android:hint="@string/hint_personal_reNewPin"
        android:inputType="numberPassword"
         />

    <Button
        android:id="@+id/button_submit_change_pin"
        style="@style/button_style"
        android:maxLength="4"
        android:onClick="submit_changePin"
        android:text="@string/button_submit_change_pin" />
</LinearLayout>
