<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="10dp"
    tools:context="com.example.cashonwise.cashonwise.PaymentActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:gravity="center"
        android:text="@string/tv_step1"
        android:textColor="#00ff73"/>

    <Button
        android:layout_gravity="center"
        android:id="@+id/button_scan"
        style="@style/button_style"
        android:text="@string/button_scan"
        android:layout_width="321dp"
        android:layout_marginBottom="15dp"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:textSize="15sp"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/tv_step2"
        android:textColor="#00ff73"/>

    <EditText
        android:id="@+id/editTextAmountToPay"
        style="@style/editText_style"
        android:layout_width="321dp"
        android:ems="10"
        android:layout_margin="15dp"
        android:inputType="textPersonName"
        android:layout_gravity="center"
        />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:textSize="15sp"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/tv_step3"
        android:textColor="#00ff73"/>

    <EditText
        android:id="@+id/editTextPin_payment"
        style="@style/editText_style"
        android:maxLength="4"
        android:layout_width="321dp"
        android:inputType="numberPassword"
        android:layout_margin="15dp"
        android:layout_gravity="center"
        android:hint="@string/hint_personal_pin"
        />

    <Button
        android:id="@+id/button_proceed"
        style="@style/button_style"
        android:layout_width="321dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:onClick="onClickProceedPayment"
        android:text="@string/button_proceed" />
</LinearLayout>
