<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="5dp"
    app:layout_collapseParallaxMultiplier="1.0"
    tools:context="com.example.cashonwise.cashonwise.ViewAccountActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="30sp"
                android:layout_marginBottom="5dp"
                android:text="Profile"
                android:textColor="#00ff73"
                />

            <TextView
                android:id="@+id/lblPersonal"
                android:layout_width="match_parent"
                android:textColor="#00ff73"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:text="@string/label_personal" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <EditText
                    android:id="@+id/editTextName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_personal_name"
                    android:ems="10"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/editTextIC"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:maxLength="12"
                    android:hint="@string/hint_personal_ic"
                    android:inputType="number"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/editTextContact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:maxLength="11"
                    android:hint="@string/hint_personal_contactno"
                    android:inputType="number"
                    />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                android:id="@+id/editTextFullAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:maxLength="100"
                android:hint="@string/hint_personal_address"
                android:inputType="number"
                />
            </android.support.design.widget.TextInputLayout>
            <CheckBox
                android:id="@+id/checkBoxAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Edit address" />

            <TextView
                android:id="@+id/lblAddress"
                android:textSize="22sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#00ff73"
                android:text="@string/label_address" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editTextAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:enabled="true"
                    android:hint="@string/hint_personal_address"
                    android:inputType="textPersonName" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editTextPosCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hint_personal_pos"
                    android:inputType="number"
                    android:maxLength="5" />
            </android.support.design.widget.TextInputLayout>

            <fr.ganfra.materialspinner.MaterialSpinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinnerState"
                app:ms_arrowColor="#00ff90"
                app:ms_arrowSize="16dp"
                app:ms_floatingLabelColor="#969696"
                app:ms_floatingLabelText="Please Select Your State"
                app:ms_hint="Please Choose"
                app:ms_hintColor="#969696"
                app:ms_multiline="false">

            </fr.ganfra.materialspinner.MaterialSpinner>

            <TextView
                android:id="@+id/lblEmail"
                android:textSize="22sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#00ff73"
                android:text="@string/label_email" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hint_personal_email"
                    android:inputType="textEmailAddress"
                    />
            </android.support.design.widget.TextInputLayout>



            <Button
                android:id="@+id/button_signup"
                style="@style/button_style"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="onClickSave"
                android:layout_marginBottom="15dp"
                android:text="Save Change" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>